made real landing page for Guest ID app

--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>My landing page</title>
+  <title>Guest ID </title>
   <link rel="shortcut icon" href="data:image/x-icon;" type="image/x-icon">
   <!-- We need this line below for responsiveness! -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- CSS-->
   <link rel="stylesheet" href="css/style.css">
+
+  <!-- META -->
+  <meta charset="UTF-8">
+
+
+
 </head>
 <body>
   <!-- code a Hero / Banner section -->
   <div class="banner">
     <div class="banner-content">
-      <h1>Amazing Coding Bootcamp!</h1>
-      <p>Learn Ruby, CSS, HTML and Javascrpt starting today!</p>
-      <a href="#" class="btn-treehouse">Start now</a>
+      <h1>Guest ID</h1>
+      <p>Sign up once, Check-in to any Hotel</p>
+      <a href="#" class="btn-treehouse">Register now</a>
     </div>
   </div>
 
@@ -24,24 +31,32 @@
     <div class="card">
       <i class="fas fa-user-plus"></i>
       <div class="card-description">
-        <h3>Apply</h3>
-        <p>With amazing Milene!</p>
+        <h3>Register</h3>
+        <p>Fill out your guest profile</p>
       </div>
      </div>
 
+    <div class="arrow-right">
+      <i class="fas fa-angle-double-right"></i>
+    </div>
+
      <div class="card">
-      <i class="fas fa-hiking"></i>
+      <i class="fas fa-share-square"></i>
       <div class="card-description">
-        <h3>Work Your Butt Off!</h3>
-        <p>Learning<br> and Practicing Ruby</p>
+        <h3>Share your profile</h3>
+        <p>Whenever Checking-in to your Hotel, with just <strong>one click</strong>, send your profile as a PDF or share it directly with a registered property!</p>
       </div>
      </div>
+
+     <div class="arrow-right">
+      <i class="fas fa-angle-double-right"></i>
+    </div>
 
      <div class="card">
       <i class="fas fa-child"></i>
       <div class="card-description">
-        <h3>Then Just Chill</h3>
-        <p>Working on your <br>Front-end Design</p>
+        <h3>All Done!</h3>
+        <p>You can go ahead and enjoy yourself without the hassle of filling out forms every time you go out!</p>
       </div>
      </div>
   </div>
@@ -55,7 +70,9 @@
       <a href="#"><i class="fab fa-github"></i></a>
 
     </div>
-    <h3 class="made-by">Coded with love by Tomás Gomes</h3>
+    <h3 class="made-by">TVBGO Productions &trade;</h3>
+
+
 
 </body>
 </html>
