hid p in card until hover

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
       <i class="fas fa-user-plus"></i>
       <div class="card-description">
         <h3>Register</h3>
-        <p>Fill out your guest profile</p>
+        <p class="hide">Fill out your guest profile</p>
+        <p class="hide">Not only for mandatory info, let the hotel know how you like things!</p>
       </div>
      </div>
 
@@ -44,7 +45,7 @@
       <i class="fas fa-share-square"></i>
       <div class="card-description">
         <h3>Share your profile</h3>
-        <p>Whenever Checking-in to your Hotel, with just <strong>one click</strong>, send your profile as a PDF or share it directly with a registered property!</p>
+        <p class="hide">Whenever Checking-in to your Hotel, with just <strong>one click</strong>, send your profile as a PDF or share it directly with a registered property!</p>
       </div>
      </div>
 
@@ -56,7 +57,7 @@
       <i class="fas fa-child"></i>
       <div class="card-description">
         <h3>All Done!</h3>
-        <p>You can go ahead and enjoy yourself without the hassle of filling out forms every time you go out!</p>
+        <p class="hide">You can go ahead and enjoy yourself without the hassle of filling out forms every time you go out!</p>
       </div>
      </div>
   </div>
