added link to pain target solution page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="banner-content">
       <h1>Guest ID</h1>
       <p>Sign up once, Check-in to any Hotel</p>
-      <a href="#" class="btn-treehouse">Register now</a>
+      <a href="https://tvbgo.github.io/registration/" class="btn-treehouse">Register now</a>
     </div>
   </div>
 
